minor refactoring and resources